frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: employee-frontend
  template:
    metadata:
      labels:
        app: employee-frontend
    spec:
      containers:
      - name: frontend-vuejs
        image: ghcr.io/ryunchang/vue3:master
        # image: ghcr.io/ryunchang/vue_crud_security:v1.0.4
        imagePullPolicy: Always
        ports:
        - containerPort: 80
