frontend/ingress_edu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingressclass.kubernetes.io/is-default-class: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: employee.yoonchang.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: employee-frontend
            port:
              number: 80
