frontend/traefik_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-routers
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: employee.yoonchang.duckdns.org 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-frontend
                port:
                  number: 80
